--- a/expense-tracker/src/app/app.component.html
+++ b/expense-tracker/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
+<div class="min-h-screen bg-gray-900 text-gray-200 p-4">
+  <router-outlet></router-outlet>
+</div>
+
